@@ -1,3 +1,7 @@
+2006-07-03  Christian W. Zuckschwerdt  <zany@triq.net>
+
+	* Removed statfs (caused problems on all but Siemens)
+
 2006-06-12  Christian W. Zuckschwerdt  <zany@triq.net>
 
 	* 64-bit safe printf format (Roberto Pariset)
